--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@pixi/react": "^8.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
+    "pixi.js": "^8.14.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
