--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pixi.js": "^8.14.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-spring": "^10.0.3",
     "three": "^0.181.2"
