--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-spring": "^10.0.3",
+    "recharts": "^3.7.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
