--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pixi.js": "^8.14.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-easy-crop": "^5.5.6",
     "react-icons": "^5.5.0",
     "react-spring": "^10.0.3",
     "recharts": "^3.7.0",
